// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders correctly 1`] = `
<DocumentFragment>
  <p
    class="css-buc8j9"
    data-testid="Text"
  >
    Text example
  </p>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Text /> renders correctly with custom Text tag: WithCustomTag 1`] = `
<DocumentFragment>
  <span
    class="css-niwogb"
    data-testid="Text"
  >
    Text example
  </span>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Text /> renders correctly with text style: WithTextStyle 1`] = `
<DocumentFragment>
  <p
    class="css-0"
    data-testid="Text"
  >
    Text example
  </p>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Text /> renders correctly with variant: WithVariant 1`] = `
<DocumentFragment>
  <p
    class="css-niwogb"
    data-testid="Text"
  >
    Text example
  </p>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
